force-app/main/default/objects/qb_Metadata__mdt/fields/Create_Item__c.field-meta.xml
<CustomField>
    <fullName>Create_Item__c</fullName>
    <label>Create Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>