force-app/main/default/objects/qb_Metadata__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <defaultValue>&quot;com.intuit.quickbooks.accounting com.intuit.quickbooks.payment openid profile email phone address&quot;</defaultValue>
    <label>Scopes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>