force-app/main/default/objects/qb_Metadata__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <defaultValue>&quot;sanchit&quot;</defaultValue>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>